# aims

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
apps/: aims_bench.cpp  aims_build.cpp  aims_dump.cpp  aims_query.cpp  aims_validate.cpp
benchmarks/schemas/: benchmark_result.schema.json  benchmark_result.tsv.header  dataset_manifest.schema.json  query_metrics.tsv.header  query_result.schema.json  truth_manifest.schema.json
docs/: algorithm.aux  algorithm.fdb_latexmk  algorithm.fls  algorithm.out  algorithm.tex  architecture_overview.md  benchmark_philosophy.md  cli_reference.md  doxygen_mainpage.md  file_format.md  initial_exact_fixed_k_plan.md  kmer_completion_todo.md  kmer_optimization_todo.md  naming_conventions.md  phase0_phase1_roadmap.md
include/aims/: types.hpp
include/aims/codecs/: codec.hpp  delta_varint.hpp  posting_block_codec.hpp
include/aims/index/: exact_dictionary.hpp  postings.hpp
include/aims/instrumentation/: metrics.hpp
include/aims/io/: fasta.hpp  mapped_file.hpp
include/aims/parallel/: execution.hpp
include/aims/query/: candidate_accumulator.hpp  kmer_search.hpp  query_planner.hpp
include/aims/router/: router.hpp
include/aims/scoring/: early_stopping.hpp
include/aims/seeds/: dna.hpp  kmer_generator.hpp  seed_generator.hpp
include/aims/serialization/: index_format.hpp
scripts/: generate_synthetic_kmer_dataset.py
src/codecs/: delta_varint.cpp  posting_block_codec.cpp
src/index/: exact_dictionary.cpp  postings.cpp
src/instrumentation/: metrics.cpp
src/io/: fasta.cpp  mapped_file.cpp
src/query/: candidate_accumulator.cpp  kmer_search.cpp  query_planner.cpp
src/seeds/: kmer_generator.cpp
src/serialization/: index_format.cpp
tests/: cli_smoke.cmake  generated_fixture_smoke.cmake  test_core.cpp
tests/data/: kmer_queries.fa  kmer_refs.fa  kmer_truth.tsv
